feat: adiciona gerenciamento de categorias